external-crates/move/crates/move-compiler/tests/move_check/parser/control_exp_associativity_else_after_if_block.exp
error[E04007]: incompatible types
   ┌─ tests/move_check/parser/control_exp_associativity_else_after_if_block.move:13:9
   │
 7 │     fun t(cond: bool, s1: S, s2: S) {
   │                           - Found: '0x42::M::S'. It is not compatible with the other type.
   ·
13 │         if (cond) { s1 }.f else s2.f
   │         ^^^^^^^^^^^^^^^^
   │         │
   │         Incompatible branches
   │         Found: '()'. It is not compatible with the other type.

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/control_exp_associativity_else_after_if_block.move:13:28
   │
13 │         if (cond) { s1 }.f else s2.f
   │                            ^^^^
   │                            │
   │                            Unexpected 'else'
   │                            Expected ';'

